K8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jurassic-backend
  namespace: jurassic-park
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jurassic-backend
  template:
    metadata:
      labels:
        app: jurassic-backend
    spec:
      containers:
      - name: jurassic-backend
        image: jurassic-backend:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
      imagePullPolicy: Always
