K8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jurassic-frontend
  namespace: jurassic-park
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jurassic-frontend
  template:
    metadata:
      labels:
        app: jurassic-frontend
    spec:
      containers:
      - name: jurassic-frontend
        image: jurassic-frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "300m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
      imagePullPolicy: Always
