K8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jurassic-backend
  namespace: jurassic-park
spec:
  selector:
    app: jurassic-backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: ClusterIP
