K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jurassic-ingress
  namespace: jurassic-park
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: jurassic-backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jurassic-frontend
            port:
              number: 80
